# large-language-model

./: .env.example  .gitignore  Dockerfile  LICENSE  PR.md  README.md  pyproject.toml
src/: agents.py
src/llm_swarm/: __init__.py  main.py
src/llm_swarm/agents/: __init__.py  swarm.py
src/llm_swarm/memory/: __init__.py  store.py
src/llm_swarm/ui/: __init__.py  app.py
